# neo4j_operator

./: .pre-commit-config.yaml  README.md  pyproject.toml
neo4j_operator/: __init__.py  database.py
neo4j_operator/queries/: __init__.py
neo4j_operator/queries/cypher_queries/: nodes_and_properties.cypher  rels_and_properties.cypher
