[tool.poetry]
name = "neo4j_operator"
version = "0.1.0"
description = "A tool that helps manage connections to neo4j instances, manage queries and results."
authors = ["Ted Johnson <ted.johnson87@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
neo4j = "^5.14.1"
python-dotenv = "^1.0.0"
docker = "^6.1.3"
pandas = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ipython = "^8.17.2"
jupyterlab = "^4.0.8"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
